<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.IzmeniActivity">

    <TextView
        android:id="@+id/textView8"
        style="@style/TextColorStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="250dp"
        android:text="@string/ime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        style="@style/TextColorStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/prezime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView8" />

    <TextView
        android:id="@+id/textView11"
        style="@style/TextColorStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/banka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/imeProfilEt"
        style="@style/TextColorStyle"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="236dp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/prezimeProfilEt"
        style="@style/TextColorStyle"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="41dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/imeProfilEt" />

    <EditText
        android:id="@+id/bankaProfilEt"
        style="@style/TextColorStyle"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="67dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/prezimeProfilEt" />

    <Button
        android:id="@+id/sacuvanIzmeneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/sacuvan_izmene"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>